--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: "julien23/thales:latest"
+      - image: "julien23/thalesdataproject:latest"
         auth:
           username: julien23
           password: $DOCKERHUB_PASSWORD # context / project UI env-var reference
