--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-        version: 19.03.13
-        docker_layer_caching: true
+          version: 19.03.13
+          docker_layer_caching: true
 
       # script
       - run: "docker build -t thalesdataproject:latest ."
@@ -24,4 +24,4 @@ workflows:
   test_and_build:
     jobs:
       - maven/test
-      - build
+      - docker-build-and-deploy
